Fix tag input placeholder position on safari

--- a/server/priv/http_root/css/categorized-tag-input.css
+++ b/server/priv/http_root/css/categorized-tag-input.css
@@ -45,6 +45,7 @@
   margin: .1em 0 .1em .4em !important;
   font-size: 1em !important;
   border: none;
+  line-height: normal;
 }
 
 .cti__tag {
